--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^17.0.2",
     "react-h5-audio-player": "^3.7.1",
     "react-magnetic-di": "^2.2.6",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
     "url-join": "^4.0.1",
