--- a/.htaccess
+++ b/.htaccess
@@ -33,3 +33,16 @@ RewriteRule ^domains/[^/]+/(.+[^/])$ /$1/ [R]
 # subdomeny - spravne presmerovani pri chybejicim /
 RewriteCond %{REQUEST_FILENAME} -d
 RewriteRule ^subdom/[^/]+/(.+[^/])$ /$1/ [R]
+
+<IfModule mod_expires.c>
+ExpiresActive On
+ExpiresDefault A600
+ExpiresByType text/javascript A604800
+ExpiresByType application/javascript A604800
+ExpiresByType text/css A604800
+ExpiresByType image/gif A604800
+ExpiresByType image/png A604800
+ExpiresByType image/jpeg A604800
+ExpiresByType image/x-icon A604800
+ExpiresByType text/html A60
+</IfModule>
