--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^4.12.3",
     "@mui/icons-material": "^5.1.0",
     "@mui/lab": "^5.0.0-alpha.51",
     "@mui/material": "^5.0.4",
@@ -16,7 +18,7 @@
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.0",
     "axios": "^0.21.1",
-    "notistack": "^1.0.9",
+    "notistack-v5": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-h5-audio-player": "^3.7.1",
