--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "react-dom": "^17.0.2",
     "react-h5-audio-player": "^3.7.1",
     "react-magnetic-di": "^2.2.6",
+    "react-mapycz": "^1.1.20",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "rooks": "^5.10.0",
     "typescript": "^4.1.2",
     "url-join": "^4.0.1",
     "web-vitals": "^1.0.1"
